working, updated plugin generator

--- a/oulogin.yaml
+++ b/oulogin.yaml
@@ -1,18 +1,13 @@
 apiVersion: krew.googlecontainertools.github.com/v1alpha2
 kind: Plugin
 metadata:
-  # 'name' must match the filename of the manifest.
-  name: restart
+  name: oulogin
 spec:
-  # 'version' is a valid semantic version string (see semver.org)
-  version: "_VERSION_"
-  # 'homepage' usually links to the GitHub repository of the plugin
+  version: "v_VERSION_"
   homepage: https://github.com/TremoloSecurity/kubectl-login
-  # 'shortDescription' explains what the plugin does in only a few words
-  shortDescription: "login to the cluster from the command line with OpenUnison"
+  shortDescription: "login to a cluster via OpenUnison from the command line"
   description: |
-    Launches a browser to login to the cluster from the cli.  
-  # 'platforms' specify installation methods for various platforms (os/arch)
+    Launches a browser to login to the cluster via OpenUnison.  OpenUnison's certificate MUST be trusted by the local system.  
   platforms:
   - selector:
       matchExpressions:
@@ -20,15 +15,13 @@ spec:
         operator: "In"
         values:
         - darwin
-    # 'uri' specifies .zip or .tar.gz archive URL of a plugin
     uri: https://nexus.tremolo.io/repository/oulogin/oulogin-_VERSION_-macos.zip
-    # 'sha256' is the sha256sum of the url above
     sha256: _MAC_SHA_
-    # 'files' lists which files should be extracted out from downloaded archive
     files:
     - from: "oulogin"
-      to: "./oulogin"
-    # 'bin' specifies the path to the the plugin executable among extracted files
+      to: "oulogin"
+    - from: "LICENSE"
+      to: "LICENSE"
     bin: oulogin
   - selector:
       matchExpressions:
@@ -36,15 +29,13 @@ spec:
         operator: "In"
         values:
         - linux
-    # 'uri' specifies .zip or .tar.gz archive URL of a plugin
     uri: https://nexus.tremolo.io/repository/oulogin/oulogin-_VERSION_-linux.zip
-    # 'sha256' is the sha256sum of the url above
     sha256: _LINUX_SHA_
-    # 'files' lists which files should be extracted out from downloaded archive
     files:
     - from: "oulogin"
-      to: "./oulogin"
-    # 'bin' specifies the path to the the plugin executable among extracted files
+      to: "oulogin"
+    - from: "LICENSE"
+      to: "LICENSE"
     bin: oulogin
   - selector:
       matchExpressions:
@@ -52,13 +43,11 @@ spec:
         operator: "In"
         values:
         - windows
-    # 'uri' specifies .zip or .tar.gz archive URL of a plugin
     uri: https://nexus.tremolo.io/repository/oulogin/oulogin-_VERSION_-win.zip
-    # 'sha256' is the sha256sum of the url above
     sha256: _WIN_SHA_
-    # 'files' lists which files should be extracted out from downloaded archive
     files:
     - from: "oulogin.exe"
-      to: "./oulogin.exe"
-    # 'bin' specifies the path to the the plugin executable among extracted files
+      to: "oulogin.exe"
+    - from: "LICENSE"
+      to: "LICENSE"
     bin: oulogin.exe
