--- a/oulogin.yaml
+++ b/oulogin.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   version: "v_VERSION_"
   homepage: https://github.com/TremoloSecurity/kubectl-login
-  shortDescription: "login to a cluster via OpenUnison from the command line"
+  shortDescription: "Login to a cluster via OpenUnison"
   description: |
     Launches a browser to login to the cluster via OpenUnison.  OpenUnison's certificate MUST be trusted by the local system.  
   platforms:
